# rohdex-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Packing List from Test Rohdex.csv  README.docker.md  README.md  Result.csv  docker-compose.yaml  pyproject.toml  requirements.txt  test-docker.sh  test_ai_integration.py
app/: main.py
archive/: generate_packing_list.py  generate_packing_list_v2.py
context/: designdoc.md  sectionanaylsis.md  tds.md  transcript.json
logs/: monitor_20250224_233322.json  monitor_20250224_234102.json  monitor_20250224_234309.json  monitor_20250224_234351.json  monitor_20250224_234439.json  monitor_20250224_235357.json  monitor_20250224_235854.json  monitor_20250225_000155.json  monitor_20250225_080524.json  monitor_20250225_081418.json  monitor_20250225_082255.json  monitor_20250225_084359.json  monitor_20250225_084817.json  monitor_20250225_085725.json  monitor_20250225_090605.json  monitor_20250225_091210.json  monitor_20250225_091614.json  monitor_20250225_092220.json  monitor_20250225_092926.json  monitor_20250225_093340.json  monitor_20250225_093538.json  monitor_20250225_094554.json  monitor_20250225_094704.json  monitor_20250225_094748.json  monitor_20250225_094901.json  monitor_20250225_095038.json  monitor_20250225_095349.json  monitor_20250225_095725.json  monitor_20250225_100158.json  monitor_20250225_101301.json  monitor_20250225_101544.json  monitor_20250225_102259.json  monitor_20250225_173701.json  monitor_20250225_174147.json  monitor_20250225_174931.json  monitor_20250225_175249.json  (+38 more)
(+29 files in other folders)
