[tool.poetry]
name = "rohdex-poc"
version = "0.1.0"
description = "Rohdex POC - Packing List Generator"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-multipart = "^0.0.20"
pandas = "^2.2.3"
rich = "^13.9.4"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
aiofiles = "^24.1.0"
imap-tools = "^1.10.0"
pydantic-settings = "^2.8.0"
litellm = "^1.61.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
